{
    "name": "PlayerInteractions",
    "maps": [
        {
            "name": "Player",
            "id": "3366b7b5-5b33-4446-b89b-cdd73f7783ae",
            "actions": [
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "37d6feb2-0b19-4b3a-b111-0b3cbad18ea3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FlashLight",
                    "type": "Button",
                    "id": "f17690d9-fb99-4b76-81ee-92cfbb081640",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FlashLitghtTypes",
                    "type": "Button",
                    "id": "60352fb8-0b35-4263-a9c9-dcb86e0b5918",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3f9d302a-32e1-4698-871d-5a432e9444ac",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70575e59-a71e-4174-add3-8a1314911f16",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlashLight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dab7f4e5-3055-48ca-b0e4-3079deb923e2",
                    "path": "<Keyboard>/capsLock",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FlashLitghtTypes",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}